Fixed homepage planet view (mostly)

--- a/templates/planet/home.html
+++ b/templates/planet/home.html
@@ -22,7 +22,16 @@
         </div>
         <!--Grid row-->
     </div>
+
     <!-- Content -->
+    <script type="text/javascript">
+        var planetEditor = {};
+        planetEditor.editingEnabled = false;
+        planetEditor.camControlsEnabled = false;
+        planetEditor.spinSpeed = 0.25;
+    </script>
+
+    </script>
     {% include 'planet/editor.html' %}
 </div>
 
