--- a/templates/planet/header.html
+++ b/templates/planet/header.html
@@ -24,31 +24,31 @@
             <!-- Right -->
             <ul class="navbar-nav nav-flex-icons ">
                 {% if user.is_authenticated %}
-                {% if user.avatar %}
-                <li class="nav-item my-1 pt-1 align-self-center" >
-                    <a href="{% url 'view_user' user.username %}">
-                        <img src="{{ user.avatar.url }}" class="img-fluid" width="45">
-                    </a>
-                </li>
-                {% else %}
-                <li class="nav-item">
-                    <i class="fas fa-user-astronaut fa-2x mx-4 my-2 pt-1" id="astronaut"></i>
-                    <a href="{% url 'register' %}" class="btn btn-dark" role="button">Register</a>
-                </li>
-                {% endif %}
-                <li class="nav-item">
-                    <a href="{% url 'logout' %}" class="btn btn-dark" role="button">Logout</a>
-                </li>
+                    {% if user.avatar %}
+                        <li class="nav-item my-1 pt-1 align-self-center">
+                            <a href="{% url 'view_user' user.username %}">
+                                <img src="{{ user.avatar.url }}" class="img-fluid" width="45">
+                            </a>
+                        </li>
+                    {% else %}
+                        <li class="nav-item">
+                            <a href="{% url 'view_user' user.username %}">
+                                <i class="fas fa-user-astronaut fa-2x mx-4 my-2 pt-1" id="astronaut"></i>
+                            </a>
+                        </li>
+                    {% endif %}
 
+                    <li class="nav-item">
+                        <a href="{% url 'logout' %}" class="btn btn-dark" role="button">Logout</a>
+                    </li>
                 {% else %}
-                <li class="nav-item">
-                    <i class="fas fa-user-astronaut fa-2x mx-4 my-2 pt-1" id="astronaut"></i>
-                </li>
-                <li class="nav-item">
-                    <a href="{% url 'login' %}" class="btn btn-dark" role="button">Login</a>
-                    <a href="{% url 'register' %}" class="btn btn-dark" role="button">Register</a>
-                </li>
-
+                    <li class="nav-item">
+                        <i class="fas fa-user-astronaut fa-2x mx-4 my-2 pt-1 text-light" id="astronaut"></i>
+                    </li>
+                    <li class="nav-item">
+                        <a href="{% url 'login' %}" class="btn btn-dark" role="button">Login</a>
+                        <a href="{% url 'register' %}" class="btn btn-dark" role="button">Register</a>
+                    </li>
                 {% endif %}
             </ul>
         </div>
