--- a/templates/planet/navbar.html
+++ b/templates/planet/navbar.html
@@ -6,6 +6,11 @@
                     <i class="fa fa-home" aria-hidden="true"></i> Homepage
                 </a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'leaderboard' %}">
+                    <i class="fab fa-rebel" aria-hidden="true"></i> Leaderboard
+                </a>
+            </li>
         </ul>
     </div>
 </nav>
