--- a/static/css/editor.css
+++ b/static/css/editor.css
@@ -32,6 +32,13 @@
     right: 2%;
 }
 
+#info {
+    position: absolute;
+    bottom: 10%;
+    right: 20%;
+    font-size: 1.5em;
+}
+
 #alertbar {
     position: fixed;
     left: 300px;
