--- a/templates/planet/view_user.html
+++ b/templates/planet/view_user.html
@@ -42,7 +42,7 @@
 <br>
 <div class="card">
     <div class="card-body d-flex justify-content-start">
-        Solar Sytem list
+        Solar System list
     </div>
 </div>
 <br>
