--- a/static/css/main.css
+++ b/static/css/main.css
@@ -63,7 +63,7 @@ body {
     .navbar:not(.top-nav-collapse) {
         background: #1C2331 !important;
     }
-    .main-screen{
+    .leftpadder{
         padding-left: 0px;
     }
 }
