--- a/templates/planet/leaderboard.html
+++ b/templates/planet/leaderboard.html
@@ -44,7 +44,7 @@
         </div>
     </div>
     <br>
-    {% include planet/planettemplate.html %}
+    {% include 'planet/planettemplate.html' %}
 </div>
 <div class="tab-pane fade" id='solar_systems' role="tabpanel" aria-labelledby="solar_system">
 <div class="card">
@@ -63,7 +63,7 @@
         </div>
     </div>
     <br>
-    {% include planet/solartemplate.html %}
+    {% include 'planet/solartemplate.html' %}
 </div>
 
 </div>
