--- a/templates/planet/view_user.html
+++ b/templates/planet/view_user.html
@@ -19,7 +19,7 @@
     </div>
 </div>
 <br>
-{% include planet/planettemplate.html %}
+{% include 'planet/planettemplate.html' %}
 <br>
 <div class="card">
     <div class="card-body d-flex justify-content-start">
@@ -27,5 +27,5 @@
     </div>
 </div>
 <br>
-{% include planet/solartemplate.html %}
+{% include 'planet/solartemplate.html' %}
 {% endblock padded_content_block %}
