--- a/templates/planet/leaderboard.html
+++ b/templates/planet/leaderboard.html
@@ -50,11 +50,14 @@
 <div class="card">
         <div class="card-body">
             <div class="row">
+				<div class="col-4">
+					<!-- Picture of the sun column -->
+				</div>
                 <div class="col-4">
-                    Solar-System
+                    Solar system
                 </div>
                 <div class="col-4">
-                    Solar-System name
+                    Owner
                 </div>
                 <div class="col-4">
                     Score
