--- a/templates/planet/solartemplate.html
+++ b/templates/planet/solartemplate.html
@@ -2,16 +2,16 @@
 <div class="card">
     <div class="card-body">
         <div class="row">
-            <div class="col-3">
+            <div class="col-4">
                 <i class="fas fa-sun text-dark"></i>
             </div>
-            <div class="col-3">
-                {{system.name}}
+            <div class="col-4">
+                <a href="../{{system.user }}/{{system}}">{{system.name}}</a>
             </div>
-            <div class="col-3">
-                User : {{system.user}}
+            <div class="col-4">
+                User : <a href="../{{system.user}}">{{system.user}}</a>
             </div>
-            <div class="col-3">
+            <div class="col-4">
                 Score : {{system.score}}
             </div>
         </div>
