links to leaderboard

--- a/templates/planet/leaderboard.html
+++ b/templates/planet/leaderboard.html
@@ -29,10 +29,10 @@
         <div class="card-body">
             <div class="row">
                 <div class="col-3">
-                    Planet Name
+                    Preview
                 </div>
                 <div class="col-3">
-                    Owner
+                    Planet name
                 </div>
                 <div class="col-3">
                     Solar System
@@ -50,16 +50,16 @@
 <div class="card">
         <div class="card-body">
             <div class="row">
-				<div class="col-4">
+				<div class="col-3">
 					<!-- Picture of the sun column -->
 				</div>
-                <div class="col-4">
+                <div class="col-3">
                     Solar system
                 </div>
-                <div class="col-4">
+                <div class="col-3">
                     Owner
                 </div>
-                <div class="col-4">
+                <div class="col-3">
                     Score
                 </div>
             </div>
