added update button

--- a/templates/planet/leaderboard.html
+++ b/templates/planet/leaderboard.html
@@ -17,7 +17,7 @@
             {{ form.choice|as_crispy_field }}
         </div>
         <div class="align-self-end pb-2">
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <button type="submit" class="btn btn-primary">Update</button>
         </div>
     </div>
 
