change the create-system

--- a/templates/planet/create_system.html
+++ b/templates/planet/create_system.html
@@ -9,7 +9,9 @@
 {% endblock header %}
 
 {% block body %}
+
 <form method="post" novalidate class="needs-validation" id="system-form" action="{% url 'create_system' username %}">
-    {% crispy user_form %}
+    {% crispy form %}
 </form>
+
 {% endblock body %}
