--- a/templates/planet/solartemplate.html
+++ b/templates/planet/solartemplate.html
@@ -8,9 +8,17 @@
             <div class="col-3">
                 {{system.name}}
             </div>
+            {% if page == 'leaderboard' %}
             <div class="col-3">
                 User : {{system.user}}
             </div>
+            {% elif user.is_authenticated%}
+            {% if user.username == username %}
+            <div class="col-3">
+                Visibility : {{system.visibility}}
+            </div>
+            {% endif %}
+            {% endif %}
             <div class="col-3">
                 Score : {{system.score}}
             </div>
