--- a/templates/planet/search.html
+++ b/templates/planet/search.html
@@ -12,7 +12,7 @@ This template presents a search box and search button within HTML form	-->
 
 {% block padded_content_block %}
 {% csrf_token %}
-<div class="card bg-primary">
+<div class="card bg-primary mx-5">
     <h2 class="card-header">Results</h2>
 
     <div class="card">
