view and create systems i working

--- a/templates/planet/create_system.html
+++ b/templates/planet/create_system.html
@@ -10,7 +10,7 @@
 
 {% block body %}
 
-<form method="post" novalidate class="needs-validation" id="system-form" action="{% url 'create_system' username %}">
+<form method="post" novalidate class="needs-validation" id="system-form" action="">
     {% crispy form %}
 </form>
 
