--- a/templates/planet/home.html
+++ b/templates/planet/home.html
@@ -12,9 +12,7 @@
             {% if not user.is_authenticated %}
             <div class="text-center white-text">
                 <h1 class="display-4 font-weight-bold">Create yours<br>now!</h1>
-                <button type="button" class="btn btn-elegant btn-lg waves-effect">Register
-                    <a href="{% url 'register' %}"></a>
-                </button>
+                <a href="{% url 'register' %}" class="btn btn-elegant btn-lg waves-effect" usage="button">Register</a>
             </div>
             {% endif %}
             <!--Grid column-->
