additional pages done

--- a/templates/planet/about.html
+++ b/templates/planet/about.html
@@ -4,4 +4,8 @@
 {% block padded_content_block %}
 
 <h1> Meet the team </h1>
+
+<div>
+	Here is our origin story
+</div>
 {% endblock padded_content_block %}
