--- a/templates/planet/contact.html
+++ b/templates/planet/contact.html
@@ -4,4 +4,8 @@
 {% block padded_content_block %}
 
 <h1> Contact us </h1>
+
+<div>
+	Here is some contact info
+</div>
 {% endblock padded_content_block %}
