--- a/templates/planet/navbar.html
+++ b/templates/planet/navbar.html
@@ -2,6 +2,11 @@
     <div class="sidebar-left">
         <ul class="navbar-nav">
             <li class="nav-item">
+                <a class="nav-link" href="{% url 'view_user' user.username%}">
+                    <i class="fas fa-user"></i> My Account
+                </a>
+            </li>
+            <li class="nav-item">
                 <a class="nav-link" href="{% url 'home' %}">
                     <i class="fa fa-home" aria-hidden="true"></i> Homepage
                 </a>
@@ -11,6 +16,7 @@
                     <i class="fab fa-rebel" aria-hidden="true"></i> Leaderboard
                 </a>
             </li>
+            
         </ul>
     </div>
 </nav>
