--- a/templates/planet/view_user.html
+++ b/templates/planet/view_user.html
@@ -3,14 +3,24 @@
 
 {% block padded_content_block %}
 <div class="text-light">
-    Account name : {{username.username}} </br>
-    Email : {{username.email}}
+    <div class="row">
+    <div class="col-4 justify-content-center d-flex align-items-center">
     {% if username.avatar %}
         </br><img src="{{ user.avatar.url }}" class="img-fluid" width="200">
     {% endif %}
+    </div>
+    <div class="col-6 justify-content-center d-flex align-items-center">
+    <div>
+        Account name : {{username.username}} </br>
+        Email : {{username.email}}
+    </div>
+    </div>
+    <div class="col-2">
     {% if username.username == user.username %}
         <br><a href="{% url 'edit_user' user %}" class="btn btn-dark" role="button">Edit</a>
     {% endif %}
+    </div>
+    </div>
 </div>
 <br>
 <div class="card">
