--- a/templates/planet/view_system.html
+++ b/templates/planet/view_system.html
@@ -9,10 +9,9 @@
 
 {% block padded_content_block %}
     <div class="card">
-
-        <h2>{{system.name}}</h2> </br>
+        <h2>{{system.name}}</h2>
+        Owner : <a href="{% url 'view_user' system.user %}">{{system.user}}</a>
         Description : {{system.description}} </br>
-
         Planets: </br>
           {% if planets %}
             {% for planet in planets %}
