--- a/templates/planet/view_user.html
+++ b/templates/planet/view_user.html
@@ -18,6 +18,7 @@
     <div class="col-2">
     {% if username.username == user.username %}
         <br><a href="{% url 'edit_user' user %}" class="btn btn-dark" role="button">Edit</a>
+        <br><a href="{% url 'delete_user' user %}" class="btn btn-danger" role="button">Delete</a>
     {% endif %}
     </div>
     </div>
