--- a/templates/planet/view_user.html
+++ b/templates/planet/view_user.html
@@ -6,7 +6,7 @@
     <div class="row">
     <div class="col-4 justify-content-center d-flex align-items-center">
     {% if username.avatar %}
-        </br><img src="{{ user.avatar.url }}" class="img-fluid" width="200">
+        </br><img src="{{ username.avatar.url }}" class="img-fluid" width="200">
     {% endif %}
     </div>
     <div class="col-6 d-flex align-items-center">
