add content about page

--- a/templates/planet/about.html
+++ b/templates/planet/about.html
@@ -3,9 +3,23 @@
 
 {% block padded_content_block %}
 
-<h1> Meet the team </h1>
 
-<div>
-	Here is our origin story
+<div class="text-light" >
+<center>
+<div style="width: 500px">
+				<h1 class="my-3">Contact us </h1>
+				<p>WadThePlanet is a project made for educational purposes as part of the WAD2 coursework.
+					The objective of our application is to provide space enthusiasts a
+					place to express their imagination about what distant planets might
+					look like. It is easy to get started even for users who are not proficient
+					in 3D modelling or digital art.</p>
+				<p>Any technical information regarding this project can be found at its GitHub repository.</p>
+				<a href="https://github.com/09ubberboy90/planetWad" target="_blank" class="btn btn-sm btn-outline-primary"><i class="fab fa-fw fa-github"></i> GitHub repository</a>
+
 </div>
+</center>
+</div>
+
+
+
 {% endblock padded_content_block %}
