--- a/templates/planet/planettemplate.html
+++ b/templates/planet/planettemplate.html
@@ -1,4 +1,25 @@
+<div class="tab-pane fade show active" id="planets" role="tabpanel" aria-labelledby="planets">
+<div class="card">
+        <div class="card-body">
+            <div class="row">
+                <div class="col-3">
+                    Preview
+                </div>
+                <div class="col-3">
+                    Planet name
+                </div>
+                <div class="col-3">
+                    Solar System
+                </div>
+                <div class="col-3">
+                    Score
+                </div>
+            </div>
+        </div>
+    </div>
+    <br>
 {% for planet in planets %}
+ 
 <div class="card">
     <div class="card-body">
         <div class="row">
@@ -18,3 +39,4 @@
     </div>
 </div>
 {% endfor %}
+</div>
