--- a/templates/planet/about.html
+++ b/templates/planet/about.html
@@ -7,7 +7,7 @@
 <div class="text-light" >
 <center>
 <div style="width: 500px">
-				<h1 class="my-3">Contact us </h1>
+				<h1 class="my-3">About us </h1>
 				<p>WadThePlanet is a project made for educational purposes as part of the WAD2 coursework.
 					The objective of our application is to provide space enthusiasts a
 					place to express their imagination about what distant planets might
