--- a/templates/planet/contact.html
+++ b/templates/planet/contact.html
@@ -5,7 +5,9 @@
 
 <link rel="stylesheet" href="{% static 'css/contact.css' %}">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-
+<div class="text-light" >
+<h1>Contact </h1> </br>
+</div>
 <div class="row">
   <div class="column">
     <div class="card">
