--- a/templates/planet/view_system.html
+++ b/templates/planet/view_system.html
@@ -8,6 +8,11 @@
 {% endblock %}
 
 {% block padded_content_block %}
+    {% if request.user == system.user %}
+    <div class="card bg-dark text-light float-right">
+      <button class="btn btn-danger">Delete</button>
+    </div>
+    {% endif %}
     <div class="card">
         <h2>{{system.name}}</h2>
         Owner : <a href="{% url 'view_user' system.user %}">{{system.user}}</a>
