Fixed (user, solar system name) pair uniqueness not being enforced

--- a/templates/planet/create_system.html
+++ b/templates/planet/create_system.html
@@ -13,5 +13,12 @@
 <form method="post" novalidate class="needs-validation" id="system-form" action="">
     {% crispy form %}
 </form>
+{% if messages %}
+{% for message in messages %}
+<div {% if message.tags %} class="{{ message.tags }}"{% endif %}>
+    {{ message }}
+</div>
+{% endfor %}
+{% endif %}
 
 {% endblock body %}
