--- a/templates/planet/comments.html
+++ b/templates/planet/comments.html
@@ -1,5 +1,6 @@
 {% load static %}
 {% load crispy_forms_tags %}
+{% load wdp_tags %}
 
 <link rel="stylesheet" type="text/css" href="{% static 'css/comments.css' %}">
 
@@ -34,7 +35,7 @@
                 </div>
 
                 <div class="col-2">
-                    {{ comment.rating }}
+                    {{ comment.rating|star_rating }}
                 </div>
 
                 <div class="col-7">
